--- a/src/client/css/contact.css
+++ b/src/client/css/contact.css
@@ -48,6 +48,7 @@
   padding: .5rem;
   padding-left: 1rem;
   position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .contactDetails .fas{
   position: absolute;
@@ -78,6 +79,9 @@
 }
 .messageButton{
   margin-left: auto;
+}
+.messageButton button{
+  background-color: var(--button-blue);
 }
 .container7{
 background-color: var(--dark-blue);
