--- a/src/client/css/signup.css
+++ b/src/client/css/signup.css
@@ -40,6 +40,7 @@
   .signUpBox{  
     background-color: white;
     margin: 3rem 0rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .signUpBoxhead{
       text-align: center;
