--- a/src/client/css/tvastraPlus.css
+++ b/src/client/css/tvastraPlus.css
@@ -2,7 +2,7 @@
     --sky-blue:#1da1f2;
     --lt-skyblue:rgb(124, 176, 212);
     --dark-blue:#13132e;
-    --light-blue:#94bedd3d;
+    --light-blue:#a3d3e6;
     --deep-blue:#7ab0d4;
     --grey:grey;
     --mid-grey:#595a5a46;
@@ -23,6 +23,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  body{
+    text-align: center;
+    color: var(--dark-blue);
+  }
   .top-nav .logo-tvastra
   {  
     width: 65%;
@@ -33,10 +37,368 @@
     align-self: center;
     justify-self: flex-end;
   }
-  
+  .container{
+    position: relative;
+  }
+  .about{
+    height: 25rem;
+    padding: 2.5rem 1.5rem;
+    background-image: url("https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/tvastraPlus_heroSection.webp");
+    background-size: cover;
+  }
+  .about h2{
+    line-height: 125%;
+    padding: 1rem 0rem;
+  }
+  .about p{
+    font-size: .8rem;
+  }
+  .headButton{
+    padding: .5rem;
+    background-color: var(--button-blue);
+    color: white;
+    font-family: Nexa-Light;
+    font-size: .8rem;
+    letter-spacing: .1rem;
+    width: fit-content;
+    margin: auto;    
+    border-radius: 5px;
+  }
+  .planSelection{
+    padding: 1rem;
+    background-image: linear-gradient(var(--light-blue),white);
+  }
+  .planDiv{
+    background-color: white;
+    padding: .5rem;   
+    box-shadow: 0 0 5px 5px #88888842;
+    }
+    .planHead{
+      padding: 1rem 0rem;
+      border-bottom: 1px solid var(--mid-grey);
+    }
+    .planHead h3{
+      padding-bottom: 1rem;
+      line-height: 130%;
+    }
+    .planHead p{
+      word-spacing: .01rem;
+      font-size: .8rem;
+      padding-bottom: .5rem;
+    }
+    .plans{
+      padding: 1rem 0rem ;
+    }
+    .planItems{
+      padding: .5rem 3rem;
+    }
+    .planItemHead{
+      padding: 1rem;
+      border-bottom: 1px solid var(--mid-grey);
+    }
+    .planDetails{
+      padding: 1rem 0rem;
+    }
+    .planDetails li{
+      padding: .5rem 0rem;
+      line-height: 160%;
+    }
+    .planItemFoot{
+      padding: 1rem;
+    }
+    .planItemFoot h4 {
+      padding: 1rem 0rem;
+    }
+    .planItemFoot h5 {
+      padding: 1rem 0rem;
+      color: var(--button-blue);
+    }
+    .planItemFoot button {
+      border-radius: 5px;
+    }
+    .advanced{
+      position: relative;
+      background-image: linear-gradient(var(--light-blue),white);
+    }
+    .popular{
+      background-color: darkgreen;
+      color: white;
+      font-size: 0.8rem;
+      border-radius: 20px;
+      padding: 0.2rem 0.5rem;
+      position: absolute;
+      top: -.7rem;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .acheivements{
+      padding:1rem;
+      color: var(--button-blue);
+    }
+    .acheivementsHead{
+      padding: 1rem 0rem;
+      line-height: 150%;
+      color: var(--dark-blue);
+    }
+    .acheivementsHead h4{
+      padding: 1rem 2rem;
+      line-height: 150%;
+    }
+    .acheivementsHead p{
+      font-size: .8rem;
+    }
+    .ratings{
+      padding: 0rem 1rem;
+    }
+    .ratings p{
+      padding: .5rem;
+    }
+    .ratings p,.ratings .stars{
+      font-size: .8rem;
+      padding: .5rem;
+    }
+    .ratingBars{
+      text-align: left;
+      padding: 0rem 3rem;
+      font-family: Nexa-Bold;
+    }
+    .ratingBarItem{
+      padding: .5rem;
+      display: grid;
+      grid-template-columns: 10% 90%;
+    }
+    .ratingBarItem span{
+      font-size: .8rem;
+    }
+    .ratingBarBase {
+      height: .8rem;
+      background-color: var(--mid-grey);
+      border-radius: 15px;
+    }
+    .ratingBar1, .ratingBar2, .ratingBar3,.ratingBar4,.ratingBar5{
+      height: 100%;
+      border-radius: 15px;
+      background-color: var(--button-blue);
+    }
+    .ratingBar1{
+      width: 60%;
+    }
+    .ratingBar2{
+      width: 30%;
+    }
+    .ratingBar3{
+      width: 30%;
+    }
+    .ratingBar4{
+      width: 20%;
+    }
+    .ratingBar5{
+      width: 10%;
+    }
+    .acheivementsSummary{
+      padding: 1rem;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-gap: 1rem;
+    }
+    .acheivementsSummary .fas{
+      font-size: 2rem;
+    }
+    .acheivementsSummary h5{
+      padding: .5rem;
+    }
+    .acheivementsSummary p{
+      font-size: .8rem;
+    }
+    .Benefits{
+      padding: 1rem;
+    }
+    .BenefitsHead{
+      margin: 0rem 2rem;
+    }
+    .BenefitsHead p{
+      padding: 1rem;
+    }
+    .underLine{
+      height: .30rem;
+      background-color: var(--light-blue);
+      border-radius: 50px;
+    }
+    .zeroFees{
+      padding: .5rem 1rem;
+    }
+    .zeroFees h3{
+      line-height: 150%;
+      padding: 1rem;
+    }
+    .zeroFeesDetails{
+      display: grid;
+      grid-template-columns: 5% 95%;
+      grid-gap: 1rem;
+      text-align: left;
+      padding-bottom: 1rem;
+    }
+    .zeroFeesDetails .fas{
+      color: var(--deep-blue);
+      font-size: 1.2rem;
+    }
+    .zeroFeesDetails p{
+      font-size: .8rem;
+      letter-spacing: .04rem;
+      padding-right: .5rem;
+    }
+    .hospitalList{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+    .hospital img{
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+  }
+  .hospital{
+      padding: 0.5rem;
+      width: auto;
+      height: 7rem;
+      border-bottom: 1px solid var(--light-blue);
+    }
+    .hospital:nth-child(odd){
+      border-right: 1px solid var(--light-blue);
+    }
+    .hospital:nth-child(5), .hospital:nth-child(6){
+      border-bottom: none;
+    }
+.topHospitalsButton{
+  padding: 1rem;
+}
+.topHospitalsButton button{
+  color: var(--grey);
+}
+.benefitDetails {
+  padding: .5rem;
+}
+.benefitDetailsSub{
+  padding: 1rem .5rem;
+}
+.benefitDetails h3{
+  padding: 1rem 0rem;
+  line-height: 150%;
+}
+.benefitDetailFigure{
+  width: 100%;
+}
+.benefitDetailImage{
+  width: 100%;
+  border-radius: 10px;
+}
+.testsSectionSub{
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: .5rem;
+}
+.testsSectionDetails{
+  display: grid;
+  grid-template-rows: 50% 25% 25%;
+  box-shadow: 0 0 4px 4px #8888881f;
+  height: 200px;
+  align-items: center;
+}
+.testsSectionDetails img{
+  width: 40%;
+  margin: auto;
+}
+.testsSectionDetails p{
+  font-size: .8rem;
+}
+.dots{
+  text-align: center;
+  padding: 1rem;
+}
+.dot1{
+  height: 10px;
+  width: 10px;
+  background-color: var(--button-blue);
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot{
+  height: 10px;
+  width: 10px;
+  margin-left: 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+.WhyWeLove{
+  padding: 1rem;
+}
+.whyWeLoveHead{
+  display: grid;
+  grid-template-columns: 80% 20%;
+  align-items: center;
+  padding: 1rem;
+}
+.whyWeLoveHead .headButton{
+  margin: 0rem;
+}
+.reviewsSection{
+  display: grid;
+  grid-gap: .5rem;
+}
+.review{  
+  box-shadow: 0 0 4px 4px #8888881f;
+  text-align: left;
+  padding: 1rem;
+}
+.review p{
+  font-family: Nexa-Bold;
+  font-size:.8rem ;
+}
+.reviewerDetails{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  padding-top: 1rem;
+}
+.reviewFigure{
+  height: 70px;
+}
+.reviewImg{
+  height: 70px;
+  width: 70%;
+  border-radius: 50%;
+  margin: auto;
+}
+.nameNplan{
+  display: grid;
+  align-items: center;
+}
+.plan{
+  background-color: var(--light-blue);
+  color: var(--button-blue);
+  font-family: Nexa-Light;
+  font-size: .8rem;
+  font-weight: bolder;
+  padding: .5rem;
+  width: fit-content;
+  border-radius: 5px;
+}
+.faqContainer{
+  padding: 1rem;
+}
+.faqContainer h3{
+  padding: 1rem 0rem;
+}
+.faqItems{
+  display: grid;
+  grid-template-columns: 95% 5%;
+  align-items: center;
+  color: var(--button-blue);
+  text-align: left;
+}
   .container7{
   background-color: var(--dark-blue);
-  text-align: center;
   padding: 0rem;
   color: white;
   border-bottom: 10px solid var(--sky-blue);
@@ -108,7 +470,6 @@
       }
     .container7{
     background-color: white;
-    text-align: center;
     padding: 1rem 2rem;
     color: white;
     display: grid;
@@ -201,7 +562,6 @@
     }
     .top-nav .nav-desktop{
       display: grid;
-      text-align: center;
     }   
     .desktop-nav{
       padding: 0rem;
