--- a/src/client/css/tvastraPlus.css
+++ b/src/client/css/tvastraPlus.css
@@ -2,7 +2,7 @@
     --sky-blue:#1da1f2;
     --lt-skyblue:rgb(124, 176, 212);
     --dark-blue:#13132e;
-    --light-blue:#a3d3e6;
+    --light-blue:#a3d3e666;
     --deep-blue:#7ab0d4;
     --grey:grey;
     --mid-grey:#595a5a46;
@@ -27,6 +27,9 @@
     text-align: center;
     color: var(--dark-blue);
   }
+  .nav-logo {
+    text-align: left;
+  }
   .top-nav .logo-tvastra
   {  
     width: 65%;
@@ -41,10 +44,20 @@
     position: relative;
   }
   .about{
+    position: relative;
     height: 25rem;
     padding: 2.5rem 1.5rem;
     background-image: url("https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/tvastraPlus_heroSection.webp");
     background-size: cover;
+  }
+  .about::after {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    height: 40px;
+    width: 100%;
+    background: linear-gradient(rgba(0,0,0,0), #00000040);
   }
   .about h2{
     line-height: 125%;
@@ -65,13 +78,18 @@
     border-radius: 5px;
   }
   .planSelection{
-    padding: 1rem;
-    background-image: linear-gradient(var(--light-blue),white);
+    background: linear-gradient(to bottom, var(--light-blue), white);
+    padding: 0 3%;
+    height: 88rem;
+
   }
   .planDiv{
-    background-color: white;
-    padding: .5rem;   
-    box-shadow: 0 0 5px 5px #88888842;
+    background: white;
+    padding: 2rem 1rem;
+    position: relative;
+    top: -11rem;
+    border-radius: .3rem;
+    box-shadow: 0 0 1rem 0 rgba(99, 99, 99, 0.3);
     }
     .planHead{
       padding: 1rem 0rem;
@@ -272,6 +290,9 @@
 .topHospitalsButton{
   padding: 1rem;
 }
+.topHospitals h4{
+  line-height: 150%;
+}
 .topHospitalsButton button{
   color: var(--grey);
 }
@@ -287,6 +308,7 @@
 }
 .benefitDetailFigure{
   width: 100%;
+  border-radius: 10px;
 }
 .benefitDetailImage{
   width: 100%;
@@ -390,13 +412,37 @@
 .faqContainer h3{
   padding: 1rem 0rem;
 }
+.faq{
+  padding: .5rem 0rem;
+}
 .faqItems{
   display: grid;
-  grid-template-columns: 95% 5%;
+  grid-template-columns: 93% 7%;
   align-items: center;
   color: var(--button-blue);
   text-align: left;
 }
+.faqItems h5{
+    line-height: 150%;
+    word-spacing: .01rem;
+    letter-spacing: .02rem;
+}
+.description{
+  background-color: var(--light-blue);
+    font-size: .6rem;
+    text-align: left;
+    padding: 1rem .5rem;
+    line-height: 1.2rem;
+}
+.fa-angle-down{
+  text-align: center;
+  border-radius: 50%;
+  height: 1.4rem;
+  width: 1.4rem;padding-top: .3rem;
+  background-color: var(--light-blue);
+  font-size: .8rem;
+  align-self: center;
+  }
   .container7{
   background-color: var(--dark-blue);
   padding: 0rem;
@@ -468,6 +514,184 @@
       .top-nav .fa-bars{ 
         font-size: 18px;
       }
+      .about{
+        text-align: left;
+        padding: 2.5rem 2rem;
+      }
+      .about h2{
+        font-size: 2rem;
+      }
+      .headButton{
+        margin-left: 0rem;
+      }
+      .planSelection{
+        height: 35rem;
+      }
+      .planDiv{
+        padding: 1rem;
+      }
+      .plans{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 0rem;
+      }
+      .planItems{
+        padding: 0rem 1rem;
+        display: grid;
+        grid-template-rows: 15% 55% 30%;
+      }
+      .planItemHead{
+        padding:0rem 0rem 1rem 0rem;
+        align-self: center;
+      }
+      .advanced{
+        padding: 1rem 2rem;
+      }
+      .planDetails{
+        padding: 1rem;
+      }
+      .advanced .planItemHead{
+        padding: 1rem 2rem;
+      }
+      .acheivements{
+        padding: 1rem 2rem;
+      }
+      .acheivementsHead{
+        padding: 2rem;
+      }
+      .ratingGrid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        padding: 0rem 5rem;
+      }
+      .ratings h1 {
+        font-size: 3rem;
+    }
+    .ratingBars{
+      padding: 0rem;
+    }
+    .acheivementsSummary{
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr;
+      align-items: center;
+    }
+    .Benefits{
+      padding: 0rem 1.5rem;
+    }
+    .underLine{
+      width: 40%;
+      margin: auto;
+    }
+    .clinic{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 1rem;
+      padding: 1rem 0rem;
+    }
+    .zeroFees{
+      text-align: left;
+      padding: 0rem;
+    }
+    .zeroFees h3{
+      padding: 1rem 0rem;
+    }
+    .zeroFeesDetails p {
+      font-size: .8rem;
+      letter-spacing: .04rem;
+      padding-right: 2rem;
+  }
+  .topHospitals h4{
+    padding: 1rem 0rem;
+  }
+  .hospitalList {
+    padding:1rem 0rem
+}
+.zeroFeesDetails{
+  padding: 1rem 0rem;
+}
+.benefitDetails{
+  display: grid;
+  grid-template-columns:repeat(2,1fr);
+  grid-auto-flow: dense;
+  grid-gap: 1rem;
+  align-items: center;
+  text-align: left;
+  padding: 1rem .5rem;
+}
+.benefitDetails:nth-child(even) .benefitDetailsSub{  
+  grid-column: 1/2;
+}
+.benefitDetails:nth-child(even) .benefitDetailFigure{  
+  grid-column: 2/3;
+}
+.benefitDetails h3 {
+  padding: 0rem;
+  line-height: 150%;
+}
+.benefitDetailFigure{
+  grid-column: 1/2;
+  
+  box-shadow: 0 0 1rem 0 rgba(99, 99, 99, 0.3);
+}
+.benefitDetailImage {
+  height: 16rem;
+}
+.benefitDetailsSub{
+  grid-column: 2/3;
+  padding: 0rem;
+  align-self: flex-start;
+}
+.zeroFeesDetails{
+  padding: 0rem 0rem 1rem 0rem;
+}
+.testsSection h6{
+  text-align: left;
+  padding: 1rem 2rem;
+}
+.testsSectionSub {
+  grid-gap: .6rem;
+  padding: 1rem 2rem;
+}
+.testsSectionDetails {
+  align-items: flex-start;
+}
+.testsSectionDetails img {
+  width: 15%;
+}
+.WhyWeLove {
+  padding: 1rem 2rem;
+  text-align: left;
+}
+.whyWeLoveHead {
+  grid-template-columns: 36% 20%;
+}
+.reviewsSection {
+  grid-template-columns: 1fr 1fr;
+}
+.review {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+}
+.faqContainer{
+  text-align: left;
+  padding: 1rem 2rem;
+}
+.faqContainer h5{
+  font-size: 1.1rem;
+}
+.description {
+  font-size: .8rem;
+    padding: 1rem;
+    letter-spacing: .02rem;
+}
+.faqItems .fa-angle-down {
+  justify-self: flex-end;
+}
+.faqItems {
+  padding-bottom: 1rem;
+}
     .container7{
     background-color: white;
     padding: 1rem 2rem;
@@ -582,7 +806,8 @@
     .navButtons{
       align-self: center;
       justify-self: flex-end;
-    }    .container7{
+    } 
+       .container7{
     background-color: white;
     padding: 1rem 5rem;
     }
