--- a/src/client/views/tvastraPlus.html
+++ b/src/client/views/tvastraPlus.html
@@ -38,6 +38,7 @@
                 </div>
                 <h2>Healthcare plans for you and your family.</h2>
                 <p>Become a Tvastra Plus Member and save 60% off on your yearly health expenses.</p>
+                <div class="fade"></div>
             </section>
     
             <section class="planSelection">
@@ -113,48 +114,50 @@
                         Tvastra is the leading healthcare technolgy company in India. We began in 2009 and today we help 2 crore customers every month.
                     </p>
                 </div>
-                <div class="ratings">
-                    <h1>4.5</h1>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <p>1000+ Reviews</p>
-                </div>
-                <div class="ratingBars">
-                    <div class="ratingBarItem">
-                        <span>5</span>
-                        <div class="ratingBarBase ">
-                            <div class="ratingBar1"></div>
+                <div class="ratingGrid">
+                    <div class="ratings">
+                        <h1>4.5</h1>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
                         </div>
+                        <p>1000+ Reviews</p>
                     </div>
-                    <div class="ratingBarItem">
-                        <span>4</span>
-                        <div class="ratingBarBase ">
-                            <div class="ratingBar2"></div>
+                    <div class="ratingBars">
+                        <div class="ratingBarItem">
+                            <span>5</span>
+                            <div class="ratingBarBase ">
+                                <div class="ratingBar1"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="ratingBarItem">
-                        <span>3</span>
-                        <div class="ratingBarBase ">
-                            <div class="ratingBar3"></div>
+                        <div class="ratingBarItem">
+                            <span>4</span>
+                            <div class="ratingBarBase ">
+                                <div class="ratingBar2"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="ratingBarItem">
-                        <span>2</span>
-                        <div class="ratingBarBase ">
-                            <div class="ratingBar4"></div>
+                        <div class="ratingBarItem">
+                            <span>3</span>
+                            <div class="ratingBarBase ">
+                                <div class="ratingBar3"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="ratingBarItem">
-                        <span>1</span>
-                        <div class="ratingBarBase ">
-                            <div class="ratingBar5"></div>
+                        <div class="ratingBarItem">
+                            <span>2</span>
+                            <div class="ratingBarBase ">
+                                <div class="ratingBar4"></div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="ratingBarItem">
+                            <span>1</span>
+                            <div class="ratingBarBase ">
+                                <div class="ratingBar5"></div>
+                            </div>
+                        </div>
+                    </div>                    
                 </div>
                 <div class="acheivementsSummary">
                     <div class="acheivedItem">
@@ -185,59 +188,61 @@
                     <p>Benefits of Plus membership</p>
                     <div class="underLine"></div>
                 </div>
-                <div class="zeroFees">
-                    <h3>Zero fees for in-clinic consultation</h3>
-                    <div class="zeroFeesDetails">
-                        <i class="fas fa-check-circle"></i>
-                        <p>
-                            Consult with 3000+ specialist doctors at top clinics & hospitals in the PLUS network at Rs. 0 consultation fees*
-                        </p>
-                    </div>
-                    <div class="zeroFeesDetails">
-                        <i class="fas fa-check-circle"></i>
-                        <p>
-                            Upto 10 in-clinic consultations can be used by any family member over 12 month period.
-                        </p>
-                    </div>
-                </div>
-                <div class="topHospitals">
-                    <h4>Top hospitals Onboarded</h4>
-                    <div class="hospitalList">
-                        <div class="hospital">
-                            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/sakra.svg" alt="">
-                        </div>
-                        <div class="hospital">
-                            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/psri.svg" alt="">
-                        </div>
-                        <div class="hospital">
-                            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/artemis.svg" alt="">
-                        </div>
-                        <div class="hospital">
-                            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/people-tree.svg" alt="">
-                        </div>
-                        <div class="hospital">
-                            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/birla.svg" alt="">
-                        </div>
-                        <div class="hospital">
-                            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/pratiksha.svg" alt="">
-                        </div>
-                    </div>
-                    <div class="topHospitalsButton">
-                        <button class="show-more">+More Hospitals</button>
-                    </div>
-                </div>
-                <div class="benefitDetails benefitDetails-1">
-                    <h3>Unlimited online consultations with top doctors</h3>
-                    <div class="benefitDetailsSub">
+                <div class="clinic">
+                    <div class="zeroFees">
+                        <h3>Zero fees for in-clinic consultation</h3>
                         <div class="zeroFeesDetails">
                             <i class="fas fa-check-circle"></i>
                             <p>
-                                Get all your health queries answered form any specialist online, any time of the day.
+                                Consult with 3000+ specialist doctors at top clinics & hospitals in the PLUS network at Rs. 0 consultation fees*
+                            </p>
+                        </div>
+                        <div class="zeroFeesDetails">
+                            <i class="fas fa-check-circle"></i>
+                            <p>
+                                Upto 10 in-clinic consultations can be used by any family member over 12 month period.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="topHospitals">
+                        <h4>Top hospitals Onboarded</h4>
+                        <div class="hospitalList">
+                            <div class="hospital">
+                                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/sakra.svg" alt="">
+                            </div>
+                            <div class="hospital">
+                                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/psri.svg" alt="">
+                            </div>
+                            <div class="hospital">
+                                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/artemis.svg" alt="">
+                            </div>
+                            <div class="hospital">
+                                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/people-tree.svg" alt="">
+                            </div>
+                            <div class="hospital">
+                                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/birla.svg" alt="">
+                            </div>
+                            <div class="hospital">
+                                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/pratiksha.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="topHospitalsButton">
+                            <button class="show-more">+More Hospitals</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="benefitDetails">
+                    <div class="benefitDetailsSub">
+                        <h3>Unlimited online consultations with top doctors</h3>
+                        <div class="zeroFeesDetails">
+                            <i class="fas fa-check-circle"></i>
+                            <p>
+                                Get all your health queries answered from any specialist online, any time of the day.
                             </p>
                         </div><div class="zeroFeesDetails">
                             <i class="fas fa-check-circle"></i>
                             <p>
-                                Connect under 2 minutes on text, call or video - availabel 24 hrs. 7 days of the week.
+                                Connect under 2 minutes on text, call or video - available 24 hrs. 7 days of the week.
                             </p>
                         </div><div class="zeroFeesDetails">
                             <i class="fas fa-check-circle"></i>
@@ -250,9 +255,9 @@
                         <img class="benefitDetailImage" src="../images/docor_benefit_img.JPG" alt="">
                     </figure>
                 </div>
-                <div class="benefitDetails benefitDetails-2">
-                    <h3>Flat 20% Off on prescription medicine, lab tests & checkups</h3>
+                <div class="benefitDetails">
                     <div class="benefitDetailsSub">
+                        <h3>Flat 20% Off on prescription medicine, lab tests & checkups</h3>
                         <div class="zeroFeesDetails">
                             <i class="fas fa-check-circle"></i>
                             <p>
@@ -276,9 +281,9 @@
                         <img class="benefitDetailImage" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/task30-tvastra-plus/order.jpg" alt="">
                     </figure>
                 </div>
-                <div class="benefitDetails benefitDetails-1">
-                    <h3>2 Free health checkups</h3>
+                <div class="benefitDetails">
                     <div class="benefitDetailsSub">
+                        <h3>2 Free health checkups</h3>
                         <div class="zeroFeesDetails">
                             <i class="fas fa-check-circle"></i>
                             <p>
@@ -412,7 +417,7 @@
                 </div>
                 <div class="faq">
                     <div class="faqItems">
-                        <h5>Are there are any tpe of doctors not included in Tvastra Plus in-clinic consultation network?</h5>
+                        <h5>Are there are any type of doctors not included in Tvastra Plus in-clinic consultation network?</h5>
                         <i class="fas fa-angle-down angle-icon accordion-btn fa-rotate-180"></i>
                     </div>
                 </div>
