--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -87,8 +87,9 @@ input[type="checkbox"]
 ::placeholder, option{
 font-family: "Nexa-Light";
 font-size: .8rem;
-color: var(--mid-grey);
+color: var(--grey);
 letter-spacing: 0.05rem;
+text-indent: 5%;
 }
 button{
 border: none;
