--- a/src/client/views/doctor.html
+++ b/src/client/views/doctor.html
@@ -10,7 +10,9 @@
     <body>
         <nav class="top-nav">
             <div class="nav-logo">
+                <a href="./index.html">
                 <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
+                </a>
             </div>
             <div class="desktop-nav desktop">          
                     <ul>                            
