--- a/src/client/views/hospital.html
+++ b/src/client/views/hospital.html
@@ -396,20 +396,15 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li>Treatment</li>
-                        <li>Contact</li>
-                        <li>FAQs</li>
-                    </ul>
-                </div> 
-                <div class="foot-list mob">
-                    <h1>FOLLOW US</h1>
-                    <li><a href="doctor.html">Doctors</a></li>
-                        <li><a href="hospital.html">Hospitals</a></li>
                         <li><a href="treatments.html">Treatments</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="FAQ.html">FAQs</a></li>
+                    </ul>
+                </div> 
+                <div class="foot-list mob">
+                    <h1>FOLLOW US</h1>                       
                 </div>
-                <div class="socialMedia tab-desktop">
+                <div class="socialMedia ">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-pinterest-p"></i>
                     <i class="fab fa-twitter"></i>
