--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -69,6 +69,11 @@ a{
   color: inherit;
   cursor: pointer;
 }
+a:hover{  
+  box-shadow: 0 0 1rem 0 rgba(99, 99, 99, 0.3);
+  font-size: 1.2rem;
+  color: var(--button-blue);
+}
 input, select{
 font-family: "Nexa-Light";
 font-size: 0.8rem;
@@ -102,6 +107,11 @@ cursor: pointer;
 button:hover {
   height: 50px;
   font-size: 1.2rem;
+  box-shadow: 0 0 1rem 0 rgba(99, 99, 99, 0.3);
+  opacity: .9;
+  background-color:var(--button-blue);
+  color:wheat;
+  border: none;
 }
 .primary{
 background-color: var(--dark-blue);
