--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -5,56 +5,47 @@
   --light-blue:#a3d3e666;
   --deep-blue:#7ab0d4;
   --grey:grey;
-  --mid-grey:#595a5a46;
-  --light-gray:#f0f0f5;
+  --mid-grey:#5b5c5c46;
+  --light-gray:#cccccc;
   --button-blue:#0568aa;
   --black:#050505;
 } 
-.mob-tab{
-  display: block;
-}
-.desktop{
-  display: none;
-}
 img
 {width: 100%;
 object-fit: contain;
 }
-.top-nav{
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.top-nav .logo-tvastra
-{  
-  width: 65%;
-}
-.top-nav .fa-bars{ 
-  font-size: 15px;
-  color:var(--grey);
-  align-self: center;
-  justify-self: flex-end;
-}
 h1, h2, h3{
-  padding: 1.5rem 1rem .5rem 1rem;
   text-align: center;
-  text-shadow: .8px 0;
+  text-shadow: .5px 0;
 }
 p{
-padding: .5rem 1rem;
+padding: .5rem;
 text-align: center;
+letter-spacing: 0.01rem;
 }
 .container{
-padding: 0rem;
+padding: 1rem;
 text-align: center;
-}
-.subcontainer{
-  padding: 1rem;
 }
 .container1{
     text-align: center;
-    background-color: var(--light-blue);
-}            
+    background-color: var(--lt-skyblue);
+}    
+.container1 h1{
+  font-size: 1.5rem;
+  padding: .5rem 1rem;
+}   
+.container1 input{
+  height: 50px;
+} 
+.location  ::placeholder{
+  font-size: .8rem;
+  text-indent: 8%;
+}  
+.search1 ::placeholder{
+  font-size: .8rem;
+  text-indent: .5rem;
+}
 .location{
   position: relative;
 }
@@ -89,22 +80,19 @@ width: 100%;
 }
 .steps{
 }
+
+.diffColor{
+ color: var(--grey);
+ opacity: 80%;
+}
 .steps  li{
-color: var(--dark-blue);
 list-style-type:none;
 list-style-position: inside;
-margin-bottom:1rem;
 font-family: 'nexa-bold';
-font-weight: 400;
 border: .1px solid var(--dark-blue);
-border-radius: 10px;
-height: 60px;
-opacity: 25%;
-vertical-align:auto;
+color: var(--mid-grey);
 padding-left: 1rem;
 text-align: left;
-line-height: 55px;
-font-size: 1.1rem;
 }
 .steps .color-li-1{
   opacity: 90%;
@@ -112,7 +100,7 @@ font-size: 1.1rem;
 .color-li-1:first-child {
   color: var(--sky-blue);
 }
-li span:nth-child(1) {
+.stp1 li span:nth-child(1) {
   color: var(--dark-blue);
 }
 .container2 img{
@@ -158,6 +146,10 @@ margin-right: 7px;
 position: relative;
 text-align: left;
 padding:0rem 0rem .5rem 2rem;
+font-size: .8rem;
+}
+.doc-details figcaption{
+  padding-bottom: 1rem;
 }
 .container4{
 background-color: white;
@@ -186,13 +178,14 @@ color: white;
 }
 .on-image h4{
 padding: 1rem;
+padding-bottom: .5rem;
 color: white;
 text-align: left;
 }
 .on-image h6{
 font-family: "Nexa-Light";
 padding-left: 1rem;
-padding-bottom: .5rem;
+padding-bottom: 2rem;
 text-align: left;
 color: white;
 }
@@ -227,107 +220,18 @@ border-radius: 15px;
 .service-grid h6{
 color: var(--grey);
 }
-.container6{
-  background-color: var(--lt-skyblue);
-  text-align: center;
-}
-.container6 h2{
-  color: white;
-}
-.container6 button{
-  padding:1rem;
-  border-radius: 5px;
-  background-color:var(--button-blue);
-}
-.container7{
-background-color: var(--dark-blue);
-text-align: center;
-padding: 0rem;
-}
-.container7 p{
-color: white;
-}
-.container7 figure{
-  width: 60%;
-  align-self: center;
-}
-.foot-image{
-  padding: 1.5rem;
-  margin: 0rem 5rem;
-}
-.container7 li{
-color: white;
-padding-bottom: 1.5rem;
-}
-.container7 .socialMedia{
-position: relative;
-padding: 1rem;
-color: white;
-font-size: .8rem;
-}
-.socialMedia .fa-facebook-f{
-position: absolute;
-left: 30%;
-bottom: 50%;
-}
-.socialMedia .fa-pinterest-p{
-position: absolute;
-left: 40%;
-bottom: 50%;
-}
-.socialMedia .fa-twitter{
-position: absolute;
-left: 50%;
-bottom: 50%;
-}
-.socialMedia .fa-google-plus-g{
-position: absolute;
-left: 60%;
-bottom: 50%;
-}
-.socialMedia .fa-instagram{
-position: absolute;
-left: 70%;
-bottom: 50%;
-}
-.foot-rights p{
-  font-size: .9rem;
-  padding-bottom: 2rem;
-}
 @media only screen and (min-width: 768px)
 {
- 
-  .mob-tab{
-    display: block;
-  }
-  .desktop{
-    display: none;
-  }
-  .top-nav{
-      padding: 2rem;
-    }
-    .top-nav .logo-tvastra
-    {  
-      width: 50%;
-    }
-    .top-nav .fa-bars{ 
-      font-size: 18px;
-    }
 h1, h2, h3,h4{
-  padding: 2rem 2rem 1rem 2rem;
   text-align: center;
   text-shadow: .8px 0;
 }
 p{
-padding: 0rem 2rem;
 text-align: center;
 }
 .container{
 padding: 0rem;
 text-align: center;
-}
-.subcontainer{
-  padding: 1rem 2rem 2rem 2rem;
 }
   .container1{
     text-align: center;
@@ -441,7 +345,6 @@ padding-right: 2rem;
       }
       .on-image h4{
         font-family: "Nexa-Light";
-      padding-bottom: 0rem;
       font-size: 1rem;
       text-align: left;
       font-weight: 200;
@@ -471,187 +374,52 @@ border-radius: 10px;
   font-size: .8rem;
   padding: 0rem;
 }
-.container6{
-  padding: 0rem;
-  }
-  .container6 h2{
-    padding-top: 1rem;
-  }
-  .container6 p{
-    padding-bottom: 1rem;
-  }
-  .container6 button{
-    font-size: 1rem;
-    border-radius: 8px;
-    }
-    .container7{
-      background-color: white;      
-      }
-      .container7 .subcontainer{
-        display: grid;
-      grid-template-columns: 3fr 1fr;
-      grid-template-rows: 2fr 1fr;
-      grid-gap: .5rem;
-      grid-template-areas: "foot-list foot-image"
-      "foot-rights socialMedia";
-      }
-      .foot-list{
-        grid-area:foot-list ;
-        padding: 1rem 0rem;
-        text-align: left;
-      }
-      .foot-image{
-        grid-area:foot-image ;
-        position: relative;
-        justify-self:self-end;
-      }
-      .container7 figure{
-        width: 80%;
-        margin: 0rem;
-        padding: 0rem;
-      }
-      .foot-rights{
-        grid-area:foot-rights ;
-        color: var(--dark-blue);
-        font-size: 1rem;
-        font-weight: 700;
-        padding: 0rem;
-        align-self: center;
-        }
-      .foot-rights p{
-        padding: 0rem;
-        color: var(--dark-blue);
-        font-size: .9rem;
-        text-align: left;
-      }
-      .container7 ul{
-        list-style-type: none;
-      }
-      .container7 li{
-        color: var(--dark-blue);
-        padding: 1rem 1rem 1rem 0rem;
-        float: left;
-        font-size: .9rem;
-      }
-      .container7 .socialMedia{
-      position: relative;
-      color: var(--dark-blue);
-      font-size: .9rem;
-      padding: 0rem;
-      text-align: right;
-      }
-      .socialMedia .fa-facebook-f{
-      position: absolute;
-      left: 10%;
-      padding: 0rem;
-      bottom: 40%;
-      }
-      .socialMedia .fa-pinterest-p{
-      position: absolute;
-      left: 30%;
-      padding: 0rem;
-      bottom: 40%;
-      }
-      .socialMedia .fa-twitter{
-      position: absolute;
-      left: 50%;
-      padding: 0rem;
-      bottom: 40%;
-      }
-      .socialMedia .fa-google-plus-g{
-      position: absolute;
-      right: 20%;
-      padding: 0rem;
-      bottom: 40%;
-      }
-      .socialMedia .fa-instagram{
-      position: absolute;
-      right: 0%;
-      padding: 0rem;
-      bottom: 40%;
-      }
   }
   @media only screen and (min-width: 1024px ){    
-    .mob-tab{
-      display: none;
-    }
-    .desktop{
-      display: block;
-    }
-    .top-nav{
-      display: grid;
-      grid-template-columns: 15% 60% 25%;
-      padding: 1.5rem 5rem;
-    } 
-    .nav-logo .logo-tvastra{
-      padding: 0rem;
-      width: 90%;
-      align-self: flex-start;
-      justify-self: left;
-    }
-    .top-nav .nav-desktop{
-      display: grid;
-      text-align: center;
-    }   
-    .desktop-nav{
-      padding: 0rem;
-      justify-self: center;
-    }
-    .desktop-nav ul{
-      list-style-type: none;
-      padding: 0rem;
-    }
-    .desktop-nav li{
-      font-family: Nexa-Light;
-      color: var(--dark-blue);
-      padding: .8rem;
-      float: left;
-      font-size: 1rem;
-      font-weight: 800;
-    }
-    .navButtons{
-      align-self: center;
-      justify-self: flex-end;
-    }
+    
     h1, h2, h3,h4{
-      padding: 4rem 5rem 1rem 5rem;
       text-align: left;
-      text-shadow: .8px 0;
+      padding:0rem;
+      padding-bottom: 1.5rem;
     }
     p{
-    padding: .75rem 5rem 1rem 5rem;
     text-align: left;
+    padding:0rem;
+    padding-bottom: 1.5rem;
     }
     .container{
-      padding: 0rem;
+      padding: 3rem 5rem;
       text-align: center;
       }
-      .subcontainer{
-        padding: 2rem 5rem 5rem 5rem;
-      }
     .container1{
+      padding: 8rem 5rem;;
       background-color: var(--light-blue);
-      width: 100%;
+      width: 10%;
       background-image: url(https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/img1.jpg);
       background-repeat: no-repeat;
       background-size: 100% 100%;
       background-position: right;
-      height: 375px;
       text-align: center;
       display: table-cell;
       vertical-align: middle;
   }
   .container1 p{
-    padding: .75rem 45rem .75rem 5rem;
+    font-size: 1rem;
     text-align: left;
+    padding: 0rem 35rem 1.5rem 0rem;
   }
   .subcontainer1{
     display: grid;
-    width: 950px;
+    width: 65%;
     grid-gap: 0rem;
     grid-template-columns: 30% 50% 20%;
     animation-name: moveLeft;
     animation-duration: 3s;
+  }
+  .container1 h1{
+    animation-name: moveRight;
+    animation-duration: 3s;
+    padding-bottom: 1.5rem;
   }
   .subcontainer1 .location{
     position: relative;
@@ -667,6 +435,7 @@ border-radius: 10px;
       padding: 0px;
       width: 100%;
       height: 50px;
+      font-size: 1rem;
     }
     .container2{
       width: 100%;
@@ -675,21 +444,27 @@ border-radius: 10px;
       text-align: left;
       }
       .container2 p{
+        font-size: .9rem;
       letter-spacing: .03rem;
       }
       .steps{
         display: grid;
-        grid-template-columns: 45% 55%;
-        grid-template-rows: repeat(7,1fr);
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(7,80px);
+        grid-gap: .5rem;
+        padding: 2rem 0rem;
+        align-items: center;
       }
       .steps li{
-        height:100px ;
+        height:100% ;
         font-size: 1.4rem;
-        line-height: 100px;
-        width: 85%;
+        line-height: 80px;
+        width: 88%;
         text-indent: 5%;
         text-shadow: .8px 0;
         border-radius: 5px;
+        margin: 0rem;
+        border: 2px solid var(--light-gray);
       }
       .stp1{
       grid-row: 1/2;
@@ -699,31 +474,34 @@ border-radius: 10px;
       }
       .stp2{
         grid-row: 2/8;
+        display: grid;
+        grid-template-rows: repeat(6,80px);
+        grid-gap: .5rem;
       }
       .FC-use{
-        grid-row: 1/8;
-        padding:0rem;
+        grid-row: 1/8;    
+        height: 500px;
+        align-self: flex-start;    
       }
-      .FC-use figure {
-        width: 20%;
+      .FC-use img {
+        height: 100%;
       }
       .FC-use h4{
         padding: 1rem 0rem 1rem 0rem;
         text-align: center;
       }
       .FC-use p{
-        padding: 0rem 8rem;
+        padding: 0rem 6rem;
         text-align: center;
       }
-      .container3{
-        padding: 0rem;
-        padding-bottom: 2rem;
+      .container3 p{
+        font-size: .9rem;
       }
       .container3 .doctor-profile{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: auto; 
-        padding:2rem 5rem;
+        padding:1.5rem 0rem;
       }
       .doctor-profile .doc-details{
         margin:0rem;
@@ -750,11 +528,8 @@ border-radius: 10px;
       border-radius: 50%;
       display: inline-block;
     }
-  .container4{
-    padding: 0rem;
-    }
-    .container4 .subcontainer{
-      padding:5rem 5rem 2rem 5rem
+  .container4 p{
+    font-size: .9rem;
     }
     .container4 h2{
       font-size: 2.1rem;
@@ -812,8 +587,10 @@ border-radius: 10px;
       }
       .container5{
         background-color: var(--light-gray);
-        padding: 0rem;
         text-align: center;
+        }
+        .container5 p{
+          font-size: .9rem;
         }
         .other-services{
           width: auto;
@@ -834,87 +611,6 @@ border-radius: 10px;
         top: 15%;
         padding:0rem;
       }
-      .container6{
-        background-color: var(--deep-blue);
-        }
-        .container6 .subcontainer{          
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2,1fr); 
-        padding:2rem 5rem;
-        grid-gap: 1rem;
-        }
-        .cont6-1{
-          grid-column: 1/2;
-          grid-row: 1/2;
-          padding: 0rem;
-        }
-        .cont6-2{
-          grid-column: 1/2;
-          grid-row: 2/3;
-          padding: 0rem;
-        }
-        .cont6-3{
-          grid-column: 2/3;
-          grid-row: 1/3;
-          align-self: center;
-          justify-self: right;
-          padding: 0rem;
-        }
-        .container6 button{
-          border-radius: 3px;
-          background-color: var(--button-blue);
-          height: 55px;
-          width: 250px;
-          }
-          .container7{
-            }
-            .container7 .subcontainer{
-              display: grid;
-              grid-template-columns: 1fr 1fr;
-              grid-template-rows: 1fr 1fr;
-              align-items: center;
-              grid-template-areas: "foot-list foot-image"
-              "foot-rights socialMedia";
-              grid-gap: 0rem;
-              padding: 1rem 5rem;
-            }
-            .foot-list{
-              padding:0rem;
-            }
-            .foot-image{
-              align-self: flex-end;
-            }
-            .container7 figure{
-              width: 25%;
-            }
-            .container7 .socialMedia{
-              display:grid;
-              grid-template-columns: repeat(5, 1fr);
-              margin: 0rem;
-              font-size: 1.1rem;
-              grid-gap: 1rem;
-            }
-            .socialMedia .fa-facebook-f{
-              top: 50%;
-              right: 24%;
-            }
-            .socialMedia .fa-pinterest-p{
-              top: 0%;
-              right: 18%;
-            }
-            .socialMedia .fa-twitter{
-              top: 0%;
-              right: 12%;
-            }
-            .socialMedia .fa-google-plus-g{
-              top: 0%;
-              right: 6%;
-            }
-            .socialMedia .fa-instagram{
-              top: 0%;
-              left:0%;
-            }
             .under::before{
               display: block;
               content: "";
@@ -931,6 +627,35 @@ border-radius: 10px;
                 }                
                 50%{
                   transform: translateX(-40px);
+                }
+                100%{
+                  opacity: 1;
+                  transform: translate(0);
+                }
+              }
+              @keyframes moveRight{
+                0%{
+                  opacity: 0;
+                }
+                25%{
+                  transform: translateX(-40px);
+                }                
+                50%{
+                  transform: translateX(100px);
+                }
+                100%{
+                  opacity: 1;
+                  transform: translate(0);
+                }
+              }@keyframes moveDown{
+                0%{
+                  opacity: 0;
+                }
+                25%{
+                  transform: translateY(1.5rem);
+                }                
+                50%{
+                  transform: translateX(-1.5rem);
                 }
                 100%{
                   opacity: 1;
