--- a/src/client/views/appoinment.html
+++ b/src/client/views/appoinment.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
-        <link rel="stylesheet" href="../css/appoinment.css">               
+        <link rel="stylesheet" href="../css/appoinment.css">     
+        <link rel="stylesheet" href="../css/common.css">               
     </head>
     <body>
         <nav class="top-nav">
