--- a/src/client/views/contact.html
+++ b/src/client/views/contact.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
-        <link rel="stylesheet" href="../css/contact.css">               
+        <link rel="stylesheet" href="../css/contact.css">    
+        <link rel="stylesheet" href="../css/common.css">                
     </head>
     <body>
         <nav class="top-nav">
@@ -73,9 +74,11 @@
         </section>
         
         <section class="container7">
-                <figure class="foot-image">
-                    <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
-                </figure> 
+            <figure class="foot-image">
+                <a href="../views/index.html">
+                <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
+                </a>
+            </figure>  
                 <div class="foot-list">       
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
