--- a/src/client/views/login.html
+++ b/src/client/views/login.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
         <link rel="stylesheet" href="../css/login.css">               
+        <link rel="stylesheet" href="../css/common.css">     
     </head>
     <body>
         <nav class="top-nav">
