--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -56,7 +56,7 @@
         <section class="container container2">
             <h2 >How it works</h2>
             <div class="mob-tab">
-                <p >Various facilities are provided here. But there is a protocol which needs to be followed so that you may get the services at its best.</p>
+                <p >Various facilities are provided here. But there is a protocol which needs to be followed so that you get the services at its best.</p>
             </div>
             <div class="desktop">
                 <p>
